@@ -2,7 +2,7 @@ package com.kaitech.student_crm.models;
 
 
 import com.fasterxml.jackson.annotation.JsonFormat;
-import com.kaitech.student_crm.models.roles.ERole;
+import com.kaitech.student_crm.models.enums.ERole;
 import jakarta.persistence.*;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
@@ -18,9 +18,6 @@ public class User implements UserDetails {
     @GeneratedValue(strategy = GenerationType.IDENTITY)
     private Long id;
 
-    @Column
-    private String username;
-
     @Column(nullable = false)
     private String firstname;
 
@@ -30,27 +27,21 @@ public class User implements UserDetails {
     @Column(unique = true)
     private String email;
 
-    @Column(unique = true)
-    private String phoneNumber;
-
     @Column(length = 3000)
     private String password;
 
-    @ManyToOne
-    @JoinColumn(name = "direction_id")
-    private Direction direction;
-
-    @OneToMany(mappedBy = "user", cascade = CascadeType.REMOVE, orphanRemoval = true)
-    private List<Report> reports = new ArrayList<>();
-
-    @ElementCollection(targetClass = ERole.class)
-    @CollectionTable(name = "user_role",
-            joinColumns = @JoinColumn(name = "user_id"))
-    private Set<ERole> roles = new HashSet<>();
+    @Enumerated(EnumType.STRING)
+    private ERole role;
 
     @JsonFormat(pattern = "yyyy-mm-dd HH:mm:ss")
     @Column(updatable = false)
     private LocalDateTime createdDate;
+
+    @ManyToOne
+    @JoinColumn(name = "direction_id")
+    private Direction direction;
+    @OneToOne(mappedBy = "user")
+    private Student student;
 
     @Transient
     private Collection<? extends GrantedAuthority> authorities;
@@ -59,14 +50,12 @@ public class User implements UserDetails {
     }
 
     public User(Long id,
-                String username,
                 String email, String password,
-                Collection<? extends GrantedAuthority> authorities) {
+                ERole role) {
         this.id = id;
-        this.username = username;
         this.email = email;
         this.password = password;
-        this.authorities = authorities;
+        this.role = role;
     }
 
     @PrePersist
@@ -76,7 +65,7 @@ public class User implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of();
+        return Collections.singletonList(this.role);
     }
 
     public Long getId() {
@@ -87,9 +76,6 @@ public class User implements UserDetails {
         this.id = id;
     }
 
-    public void setUsername(String username) {
-        this.username = username;
-    }
 
     public String getFirstname() {
         return firstname;
@@ -115,25 +101,10 @@ public class User implements UserDetails {
         this.email = email;
     }
 
-    public String getPhoneNumber() {
-        return phoneNumber;
-    }
-
-    public void setPhoneNumber(String phoneNumber) {
-        this.phoneNumber = phoneNumber;
-    }
-
     public void setPassword(String password) {
         this.password = password;
     }
 
-    public Set<ERole> getRoles() {
-        return roles;
-    }
-
-    public void setRoles(Set<ERole> roles) {
-        this.roles = roles;
-    }
 
     public LocalDateTime getCreatedDate() {
         return createdDate;
@@ -162,7 +133,7 @@ public class User implements UserDetails {
 
     @Override
     public String getUsername() {
-        return username;
+        return email;
     }
 
     @Override
@@ -183,5 +154,21 @@ public class User implements UserDetails {
     @Override
     public boolean isEnabled() {
         return true;
+    }
+
+    public ERole getRole() {
+        return role;
+    }
+
+    public void setRole(ERole role) {
+        this.role = role;
+    }
+
+    public Student getStudent() {
+        return student;
+    }
+
+    public void setStudent(Student student) {
+        this.student = student;
     }
 }
